# cryptoheir

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  update-abi.js
cryptoheir-go/: .env.example  Makefile  README.md  go.mod  go.sum
cryptoheir-go/cmd/cryptoheir/: main.go
cryptoheir-go/internal/commands/: broadcast.go  prepare.go  sign.go
cryptoheir-go/internal/contract/: CryptoHeir.json  contract.go
cryptoheir-go/internal/crypto/: crypto.go
cryptoheir-go/internal/network/: network.go
cryptoheir-go/internal/tui/: tui.go
cryptoheir-go/internal/types/: types.go
cryptoheir-rs/: .env.example  BUILD_ARM64.md  Cargo.toml  README.md
cryptoheir-rs/src/: contract.rs  crypto.rs  lib.rs  main.rs  network.rs  qr.rs  tui.rs  types.rs
cryptoheir-rs/src/commands/: broadcast.rs  mnemonic.rs  mod.rs  prepare.rs  sign.rs
foundry/: SECURITY.md  foundry.toml
foundry/script/: Deploy.s.sol  DeployTestToken.s.sol
foundry/src/: CryptoHeir.sol  TestToken.sol
foundry/test/: CryptoHeir.t.sol  CryptoHeirInvariant.t.sol
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: fetch-dashboard-data.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Dashboard.jsx  DepositForm.jsx  InheritanceManager.jsx  Layout.jsx  (+5 more)
offline-signer/: .env.example  README.md  TESTING.md  broadcast-transaction.js  package-lock.json  package.json  prepare-transaction.js  sign-transaction.js  test-prepare.sh
src/: CryptoHeir.sol
test/: CryptoHeir.t.sol
(+23 files in other folders)
