[package]
name = "cryptoheir-rs"
version = "0.1.0"
edition = "2024"
authors = ["CryptoHeir Contributors"]
description = "Air-gapped offline transaction signing for CryptoHeir contract (Rust implementation)"
license = "MIT"

[[bin]]
name = "cryptoheir-rs"
path = "src/main.rs"

[dependencies]
# Ethereum libraries (alloy)
alloy = { version = "0.8", features = ["full", "node-bindings", "rpc-types-eth", "signer-local", "sol-types", "rlp"] }
alloy-signer-local = { version = "0.8", features = ["mnemonic"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# QR code support
qrcode = "0.14"
rqrr = "0.8"
image = "0.25"

# Environment variables
dotenvy = "0.15"

# Error handling
eyre = "0.6"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
chrono = "0.4"
rand = "0.8"

# OpenSSL with vendored feature for cross-compilation
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.14"
